// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`lineNumberify util handles multiple lines 1`] = `
Array [
  Object {
    "children": Array [
      Object {
        "children": Array [
          Object {
            "type": "text",
            "value": "fn
",
          },
        ],
        "properties": Object {
          "className": Array [],
        },
        "tagName": "span",
        "type": "element",
      },
    ],
    "properties": Object {
      "className": Array [
        "line-number",
      ],
      "data-node-index": 1,
    },
    "tagName": "span",
    "type": "element",
  },
  Object {
    "children": Array [
      Object {
        "type": "text",
        "value": "
",
      },
    ],
    "properties": Object {
      "className": Array [
        "line-number",
      ],
      "data-node-index": 2,
    },
    "tagName": "span",
    "type": "element",
  },
  Object {
    "children": Array [
      Object {
        "type": "text",
        "value": "
",
      },
    ],
    "properties": Object {
      "className": Array [
        "line-number",
      ],
      "data-node-index": 3,
    },
    "tagName": "span",
    "type": "element",
  },
  Object {
    "children": Array [
      Object {
        "type": "text",
        "value": "
",
      },
    ],
    "properties": Object {
      "className": Array [
        "line-number",
      ],
      "data-node-index": 4,
    },
    "tagName": "span",
    "type": "element",
  },
  Object {
    "children": Array [
      Object {
        "type": "text",
        "value": "abc
",
      },
    ],
    "properties": Object {
      "className": Array [
        "line-number",
      ],
      "data-node-index": 5,
    },
    "tagName": "span",
    "type": "element",
  },
  Object {
    "children": Array [
      Object {
        "children": Array [
          Object {
            "type": "text",
            "value": "",
          },
        ],
        "properties": Object {
          "className": Array [],
        },
        "tagName": "span",
        "type": "element",
      },
      Object {
        "children": Array [
          Object {
            "type": "text",
            "value": "t",
          },
        ],
        "properties": Object {
          "className": Array [
            "token",
            "function",
          ],
        },
        "tagName": "span",
        "type": "element",
      },
      Object {
        "children": Array [
          Object {
            "type": "text",
            "value": "(",
          },
        ],
        "properties": Object {
          "className": Array [
            "token",
            "punctuation",
          ],
        },
        "tagName": "span",
        "type": "element",
      },
      Object {
        "children": Array [
          Object {
            "type": "text",
            "value": ")",
          },
        ],
        "properties": Object {
          "className": Array [
            "token",
            "punctuation",
          ],
        },
        "tagName": "span",
        "type": "element",
      },
    ],
    "properties": Object {
      "className": Array [
        "line-number",
      ],
      "data-node-index": 6,
    },
    "tagName": "span",
    "type": "element",
  },
]
`;

exports[`lineNumberify util handles one-liners 1`] = `
Array [
  Object {
    "children": Array [
      Object {
        "children": Array [
          Object {
            "type": "text",
            "value": "fn",
          },
        ],
        "properties": Object {
          "className": Array [
            "token",
            "function",
          ],
        },
        "tagName": "span",
        "type": "element",
      },
      Object {
        "children": Array [
          Object {
            "type": "text",
            "value": "(",
          },
        ],
        "properties": Object {
          "className": Array [
            "token",
            "punctuation",
          ],
        },
        "tagName": "span",
        "type": "element",
      },
      Object {
        "children": Array [
          Object {
            "type": "text",
            "value": ")",
          },
        ],
        "properties": Object {
          "className": Array [
            "token",
            "punctuation",
          ],
        },
        "tagName": "span",
        "type": "element",
      },
      Object {
        "children": Array [
          Object {
            "type": "text",
            "value": ";",
          },
        ],
        "properties": Object {
          "className": Array [
            "token",
            "punctuation",
          ],
        },
        "tagName": "span",
        "type": "element",
      },
    ],
    "properties": Object {
      "className": Array [
        "line-number",
      ],
      "data-node-index": 1,
    },
    "tagName": "span",
    "type": "element",
  },
]
`;
